<resources>
    <string name="app_name">Minutes_duplicate</string>
    <string name="title_activity_email__login">Email Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_email__sign_in">SignIn</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="stamps">Stamps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_sample">Sample</string>
</resources>
