<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.orion_stark.minutes_duplicate.controllers.Edit_Username">
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eff1f2">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#135084"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Update Profile" />

        </android.support.design.widget.AppBarLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="17dp">
            <EditText
                android:id="@+id/first_name_update"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:padding="8dp"
                android:background="@drawable/border"
                android:shadowColor="#000000"
                />
            <EditText
                android:id="@+id/last_name_update"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:padding="8dp"
                android:background="@drawable/border"
                />
        </android.support.v7.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/btn_submit_updateProfile"
                android:text="@string/submit"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_orange_dark"
                android:textAlignment="center"
                android:gravity="center" />
        </LinearLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>
